--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,11 +1,12 @@
-name: 'check ranking for all keywords'
-on: 
+name: 'Check ranking for all keywords'
+on:
   schedule:
-     - cron: '0 0 * * *'
-  jobs:
-    cron:
-      runs-on: ubuntu-latest
-      steps:
-        -name: Call our api route
-         run: |
-           curl ''
+    - cron: '0 0 * * *'  # This schedule runs the job every day at midnight UTC
+
+jobs:
+  cron:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Call our API route
+        run: |
+          curl -X GET 'https://nishkun-rank-tracker.vercel.app/api/check-for-all-keywords'
